# fastapi-tdd-docker

./: README.md
project/: Dockerfile  pyproject.toml  requirements.txt
project/tests/: test_ping.py
