[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Marco Paspuel <marco.paspuel@helsing.ai>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.70.1"
uvicorn = "0.16.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
